--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
-Website_home.css
-
-#siteNav li {
-    background: blue;
+#siteNav > a{
+    background: lightgray;
     padding: 10px;
-    border: 3px solid red;
+    border: 3px solid black;
+    border-radius: 20px 20px 0 0;
+}
+
+#gofindIt {
+    padding: 20px;
 }
