--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 #siteNav > a{
     background: lightgray;
-    padding: 10px;
-    border: 3px solid black;
-    border-radius: 20px 20px 0 0;
+    padding: 5px;
+    border: 4px solid black;
+    border-radius: 30px 30px 0 0;
 }
 
 #gofindIt {
@@ -12,53 +12,32 @@
 /* flat-ui-login */
 
 #loginOptions > h2{
-  padding: 20px;
-  color: #ecf0f1;
+  padding: 5px;
+  color: blueviolet;
 }
 
 fieldset {
-  border: none;
+  border: blue;
 }
 
 #login {
   position: relative;
-  width: 350px;
+  width: 50px;
   display: none;
 }
 
 .arrow-up {
-  width: 0;
-  height: 0;
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-  border-bottom: 15px solid #ECF0F1;
-  left: 10%;
-  position: absolute;
-  top: -10px;
+  
 }
 
 .formholder {
-  background: #ecf0f1;
-  width: 350px;
-  border-radius: 5px;
-  padding-top: 5px;
+  
 }
 .formholder input[type="email"], .formholder input[type="password"] {
-  padding: 7px 5px;
-  margin: 10px 0;
-  width: 96%;
-  display: block;
-  font-size: 18px;
-  border-radius: 5px;
-  border: none;
-  -webkit-transition: 0.3s linear;
-  -moz-transition: 0.3s linear;
-  -o-transition: 0.3s linear;
-  transition: 0.3s linear;
+  
 }
 .formholder input[type="email"]:focus, .formholder input[type="password"]:focus {
-  outline: none;
-  box-shadow: 0 0 1px 1px #1abc9c;
+  
 }
 .formholder input[type="submit"] {
   background: #1abc9c;
@@ -70,6 +49,29 @@ fieldset {
   color: #fff;
   border-radius: 5px;
 }
-.formholder input[type="submit"]:hover {
-  background: #1bc6a4;
+.green {
+  color: #31de31;
+}
+
+#buyThings {
+  background:  Blue
+}
+
+#buyThings > a{
+  color: white;
+  border: 2px solid white;
+  padding: 5px
+
+}
+
+#slider {
+  width: 100%;
+  background:aliceblue
+}
+
+#headLines {
+}
+
+#headLines > li{
+ 
 }
